--- a/app/views/links/index.html.erb
+++ b/app/views/links/index.html.erb
@@ -1,1 +1,8 @@
-<h1>:)<h1>
+<nav>
+  <ul>
+    <li>Welcome, <%= current_user.email %></li>
+    <li> <%= link_to "Sign Out", logout_path, method: :delete  %></li>
+  </ul>
+</nav>
+
+<h1>This is the links page<h1>
