--- a/app/views/links/index.html.erb
+++ b/app/views/links/index.html.erb
@@ -1,8 +1,21 @@
 <nav>
   <ul>
     <li>Welcome, <%= current_user.email %></li>
+    <% if current_user %>
     <li> <%= link_to "Sign Out", logout_path, method: :delete  %></li>
+    <% end %>
   </ul>
 </nav>
 
-<h1>This is the links page<h1>
+<%= form_for (Link.new) do |f| %>
+<%= f.text_field :title, placeholder: 'Title' %>
+<%= f.text_field :url, placeholder: 'URL' %>
+<%= f.submit %>
+<% end %>
+
+<h1>My Links<h1>
+  <% @links.each do |link| %>
+  <%= link.title %>
+  <%= link.url %>
+  <%= link.read %></br>
+  <% end %>
