--- a/app/views/welcome/show.html.erb
+++ b/app/views/welcome/show.html.erb
@@ -1,3 +1,3 @@
-<h2> Log In </h2>
-<h2>or</h2>
-<%= link_to 'Sign Up', new_user_path %>
+<%= link_to "Log In", login_path %>
+or
+<%= link_to "Sign Up", new_user_path %>
