remove editable tag from links

--- a/app/views/links/index.html.erb
+++ b/app/views/links/index.html.erb
@@ -31,8 +31,8 @@
     <tbody class="all-links">
 
       <tr data-id='<%= link.id %>' class='link'>
-        <td contenteditable="true" class="title"><%= link.title %></td>
-        <td contenteditable="true" class="url"><%= link.url %></td>
+        <td class="title"><%= link.title %></td>
+        <td class="url"><%= link.url %></td>
         <% if link.read == false %>
         <td><input type="checkbox" class="read-link"></td>
         <% else %>
