--- a/app/views/links/index.html.erb
+++ b/app/views/links/index.html.erb
@@ -1,45 +1,47 @@
-<nav>
-  <ul>
-    <li>Welcome, <%= current_user.email %></li>
-    <% if current_user %>
-    <li> <%= link_to "Sign Out", logout_path, method: :delete  %></li>
-    <% end %>
-  </ul>
-</nav>
-
-<h3>Submit a New Link</h3>
-<%= form_for (Link.new) do |f| %>
-<%= f.text_field :title, placeholder: 'Title' %>
-<%= f.text_field :url, placeholder: 'URL' %>
-<%= f.submit 'Submit Link' %>
+<% if current_user %>
+  <%= link_to "Sign Out", logout_path %>
 <% end %>
 
-<h3>My Links<h3>
-  <table>
-    <tr>
-      <% @links.each do |link| %>
+<h1>Add a New Link:</h1></br>
+<%= form_for(Link.new) do |f| %>
+  <%= f.label :title %>
+  <%= f.text_field :title %>
+  <%= f.label :url %>
+  <%= f.text_field :url %>
+  <%= f.submit %>
+<% end %>
 
-      <th><u>Title</u></th>
-      <th><u>Link</u></th>
-      <% if link.read == false %>
-      <th><u>Mark As Read</u></th>
-      <% else %>
-      <th><u>Mark As Unread</u></th>
-      <% end %>
+<h1>My Links</h1></br>
+<h2>Filter by read/unread</h2>
+
+<form action="">
+
+  <input type="radio" name="filter" class="read"> Read<br>
+  <input type="radio" name="filter" class="unread"> Unread<br>
+</form></br>
+<table>
+  <tr>
+
+    <th><u>Title</u></th>
+    <th><u>Link</u></th>
+    <th><u>Read?</u></th>
+    <th><u>Mark As Read</u></th>
+    <th><u>Mark As Unread</u></th>
+  </tr>
+  <% @links.each do |link| %>
+
+  <tbody class="each-link">
+
+    <tr data-id='<%= link.id %>' class='link'>
+      <td class="title-text"><%= link.title %></td>
+      <td class="url-text"><%= link.url %></td>
+      <td class="read-text"><%= link.read %></td>
+
+
+      <td><input type="checkbox" class="read-link"></td>
+      <td><input type="checkbox" class="unread-link"></td>
+      <td><%= button_to "Edit Link", edit_link_path(link), method: :get %></td>
     </tr>
-
-    <tbody class="all-links">
-
-      <tr data-id='<%= link.id %>' class='link'>
-        <td class="title"><%= link.title %></td>
-        <td class="url"><%= link.url %></td>
-        <% if link.read == false %>
-        <td><input type="checkbox" class="read-link"></td>
-        <% else %>
-        <td><input type="checkbox" class="unread-link"></td>
-        <% end %>
-        <td><%= button_to "Edit Link", edit_link_path(link), method: :get %></td>
-      </tr>
-      <% end %>
-    </tbody>
-  </table>
+    <% end %>
+</tbody>
+</table>
