add filtering by read/unread, - add updating read status without page refresh

--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -1,7 +1,7 @@
-.strikethrough, .true {
-  text-decoration: line-through;
+#unread-links {
+  color: blue;
 }
 
-.blue {
-  color: blue;
+#read-links {
+  text-decoration: line-through;
 }
