--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,11 @@
   <%= stylesheet_link_tag    'application', media: 'all' %>
   <%= javascript_include_tag 'application' %>
 </head>
-
+<nav>
+  <div class="search">
+    Search for Links:<input class="nav-right" type="text" placeholder="Search" required id="search-bar">
+  </div>
+</nav></br>
 <body>
   <div class="container">
     <% flash.each do |type, message| %>
