--- a/app/views/links/_filter_selection.html.erb
+++ b/app/views/links/_filter_selection.html.erb
@@ -1,10 +1,13 @@
-<h3> Filters:</h3>
-  <label class="filter-selection">
-    <input type="button" name="selection" class="all"> Show All
+<h3>More Filters:</h3>
+  <label class="filter-options">
+    <input type="button" name="options" class="all"> Show All
   </label>
-  <label class="filter-selection">
-    <input type="button" name="selection" class="filter-read"> Show Read
+  <label class="filter-options">
+    <input type="button" name="options" class="filter-read"> Show Read
   </label>
-  <label class="filter-selection">
-    <input type="button" name="selection" class="filter-unread"> Show Unread
+  <label class="filter-options">
+    <input type="button" name="options" class="filter-unread"> Show Unread
+  </label>
+  <label class="checkbox-inline">
+    <input type="checkbox" id="sort-alphabetically"> Sort Link Titles Alphabetically
   </label>
