--- a/app/views/links/_filter_selection.html.erb
+++ b/app/views/links/_filter_selection.html.erb
@@ -1,4 +1,4 @@
-<h3>More Filters:</h3>
+<h3> Filters:</h3>
   <label class="filter-options">
     <input type="button" name="options" class="all"> Show All
   </label>
