--- a/app/views/links/index.html.erb
+++ b/app/views/links/index.html.erb
@@ -19,8 +19,8 @@
 
 <h1>My Links</h1></br>
 
-<table>
-  <tr>
+<table class="every-link">
+  <tr class="table-row">
 
     <th><u>Title</u></th>
     <th><u>Link</u></th>
@@ -31,7 +31,7 @@
     <% if link.read %>
       <tbody class="all-links">
 
-        <tr data-id='<%= link.id %>' class='unread_link'>
+        <tr data-id='<%= link.id %>' class='unread-link'>
           <td class="title-text" ><%= link.title %></td>
           <td class="url-text" id="read-links"><%= link.url %></td>
           <td class="read-text"><%= link.read %></td>
@@ -41,7 +41,7 @@
       </tbody>
     <% else %>
       <tbody class="all-links" id="unreadme">
-        <tr data-id='<%= link.id %>' class='read_link'>
+        <tr data-id='<%= link.id %>' class='read-link'>
 
           <td class="title-text" ><%= link.title %></td>
           <td class="url-text" id="unread-links" ><%= link.url %></td>
