--- a/app/views/links/index.html.erb
+++ b/app/views/links/index.html.erb
@@ -8,7 +8,7 @@
   <%= f.text_field :title %>
   <%= f.label :url %>
   <%= f.text_field :url %>
-  <%= f.submit %>
+  <%= f.submit 'Submit Link' %>
 <% end %></br>
 
 <div class="searching">
