--- a/app/views/links/index.html.erb
+++ b/app/views/links/index.html.erb
@@ -44,7 +44,7 @@
         <tr data-id='<%= link.id %>' class='read-link'>
 
           <td class="title-text" ><%= link.title %></td>
-          <td class="url-text" id="unread-links" ><%= link.url %></td>
+          <td class="url-text" id="unread-links" ><%= link_to link.url, link.url %></td>
           <td class="read-text" ><%= link.read %></td>
           <td><input type="button" value="Mark as Read" class="mark-read" ></td><br>
           <td><%= button_to "Edit Link", edit_link_path(link), method: :get %></td>
