--- a/app/views/links/index.html.erb
+++ b/app/views/links/index.html.erb
@@ -4,12 +4,14 @@
 
 <h1>Add a New Link:</h1></br>
 <%= form_for(Link.new) do |f| %>
-  <%= f.label :title %>
-  <%= f.text_field :title %>
-  <%= f.label :url %>
-  <%= f.text_field :url %>
+  <%= f.text_field :title, placeholder: "Title" %>
+  <%= f.text_field :url, placeholder: "URL" %>
   <%= f.submit 'Submit Link' %>
 <% end %></br>
+
+<p>You can also email your new link to a friend! Simply enter your URL in this format: 'http://example.com \:cc friend@example.com' </p>
+<p>Note: URL must be prefaced by 'http:' or 'https:'</p>
+<br>
 
 <div class="searching">
   Search for Links:<input class="nav-right" type="text" placeholder="Search" required id="search-bar">
@@ -17,7 +19,7 @@
 
   <%= render 'filter_selection' %>
 
-<h1>My Links</h1></br>
+<h1>My Links</h1>
 
 <table class="every-link">
   <tr class="table-row">
