--- a/app/views/links/index.html.erb
+++ b/app/views/links/index.html.erb
@@ -9,8 +9,8 @@
   <%= f.submit 'Submit Link' %>
 <% end %></br>
 
-<p>You can also email your new link to a friend! Simply enter your URL in this format: 'http://example.com \:cc friend@example.com' </p>
-<p>Note: URL must be prefaced by 'http:' or 'https:'</p>
+<p>Email your new link to a friend! Just enter your URL in this format: 'http://example.com \:cc friend@example.com' </p>
+<p>Note: URL <b>must</b> be prefaced by 'http:' or 'https:'</p>
 <br>
 
 <div class="searching">
@@ -19,8 +19,8 @@
 
   <%= render 'filter_selection' %>
 
-<h1>My Links</h1>
 
+<h1>My Links</h1>
 <table class="every-link">
   <tr class="table-row">
 
