fix spacing in js

--- a/app/views/links/index.html.erb
+++ b/app/views/links/index.html.erb
@@ -17,13 +17,12 @@
   Search for Links:<input class="nav-right" type="text" placeholder="Search" required id="search-bar">
 </div>
 
-  <%= render 'filter_selection' %>
+  <%= render 'filter_selection' %><br>
 
 
-<h1>My Links</h1>
-<table class="every-link">
+<br><h1>My Links</h1>
+<table class="every-link" style="width:100%">
   <tr class="table-row">
-
     <th><u>Title</u></th>
     <th><u>Link</u></th>
     <th><u>Read?</u></th>
